// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/DetailTaches/FiltreStatut All 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  data-test="undefined-select-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi--sm w-full text-center text-bf500 font-bold fr-fi-filter-fill"
  >
     Statut
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
  />
</button>
`;

exports[`Storyshots app/pages/collectivite/DetailTaches/FiltreStatut Multi Select 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  data-test="undefined-select-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi--sm w-full text-center text-bf500 font-bold fr-fi-filter-line"
  >
     Statut
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90"
  />
</button>
`;
